sorted out the wiki API integration